Design contentpage for adding a new event

--- a/PropertyAgencyMobileApp.iOS/PropertyAgencyMobileApp.iOS.csproj
+++ b/PropertyAgencyMobileApp.iOS/PropertyAgencyMobileApp.iOS.csproj
@@ -142,4 +142,7 @@
       <Name>PropertyAgencyMobileApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\logo.png" />
+  </ItemGroup>
 </Project>
